feat:added review 242

--- a/problems-review/220~250.ipynb
+++ b/problems-review/220~250.ipynb
@@ -843,7 +843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -851,7 +851,7 @@
      "output_type": "stream",
      "text": [
       "insert first word: abcd\n",
-      "insert second word: cadb\n"
+      "insert second word: cabd\n"
      ]
     }
    ],
@@ -860,30 +860,9 @@
     "# abcd, cadb는 구성이 같다.\n",
     "# abef, beac는 구성이 다르다\n",
     "\n",
-    "a = input(\"insert first word: \").split(\"\")\n",
-    "b = input(\"insert second word: \").split(\"\")\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'str' object has no attribute 'sort'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-5-4b975d12b537>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mif\u001b[0m \u001b[0ma\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msort\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0mb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msort\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"same\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"not same\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'str' object has no attribute 'sort'"
-     ]
-    }
-   ],
-   "source": [
-    "if a.sort == b.sort:\n",
+    "a = input(\"insert first word: \")\n",
+    "b = input(\"insert second word: \")\n",
+    "if set(a) == set(b):\n",
     "    print(\"same\")\n",
     "else:\n",
     "    print(\"not same\")"
@@ -891,21 +870,112 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#242 정수를 차례로 입력받다가 0이 입력되거나, 입력된 정수가 100개를 초과하면, 0을 제외하고 가장 나중에 입력된 정수부터 차례대로 출력\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'str' object has no attribute 'sort'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-7-2ed0d7de6146>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0ma\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msort\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m: 'str' object has no attribute 'sort'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the number: 10\n",
+      "Enter the number: 2\n",
+      "Enter the number: 4\n",
+      "Enter the number: 5\n",
+      "Enter the number: 0\n",
+      "5 4 2 10 "
      ]
     }
    ],
+   "source": [
+    "array = [0] * 100\n",
+    "i = 0\n",
+    "a = int(input(\"Enter the number: \"))\n",
+    "\n",
+    "while a != 0:\n",
+    "    array[i] = a\n",
+    "    i += 1\n",
+    "    a = int(input(\"Enter the number: \"))\n",
+    "    \n",
+    "for j in range(i-1, -1, -1):\n",
+    "    print(array[j], end= \" \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "insert number: 10\n",
+      "insert number: 5\n",
+      "insert number: 4\n",
+      "insert number: 2\n",
+      "insert number: 1\n",
+      "insert number: 0\n",
+      "1 2 4 5 10 "
+     ]
+    }
+   ],
+   "source": [
+    "array = [0] * 100\n",
+    "i = 0\n",
+    "a = int(input(\"insert number: \"))\n",
+    "\n",
+    "while a != 0:\n",
+    "    array[i] = a\n",
+    "    i += 1\n",
+    "    a = int(input(\"insert number: \"))\n",
+    "    \n",
+    "for j in range(i-1,-1,-1):\n",
+    "    print(array[j], end=\" \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
