--- a/problems-review/220~250.ipynb
+++ b/problems-review/220~250.ipynb
@@ -973,6 +973,117 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#243 숫자(n)이 입력되면, \n",
+    "#a) 1열은 모두 1\n",
+    "#b) n번째 행의 다른 원소들은 n-1과 n번째 행 바로위으 숫자를 더한값으로 표현하시오.\n",
+    "\n",
+    "# ex) 1 | 1| 1\n",
+    "#     1 | 2| 3\n",
+    "#     1 | 3| 6\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "insert number: 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = int(input(\"insert number: \"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "array = [[0] * a for i in range(a)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[0, 0, 0, 0, 0],\n",
+       " [0, 0, 0, 0, 0],\n",
+       " [0, 0, 0, 0, 0],\n",
+       " [0, 0, 0, 0, 0],\n",
+       " [0, 0, 0, 0, 0]]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "for i in range(0, a):\n",
+    "    for j in range(0, a):\n",
+    "        if i == 0 or j == 0: #첫째 행이나 열은 1\n",
+    "            array[i][j] = 1\n",
+    "        else:\n",
+    "            array[i][j] = array[i-1][j] + array[i][j - 1]\n",
+    "            \n",
+    "def printarry(array):\n",
+    "    for i in range(len(array)):\n",
+    "        for j in range(len(array[0])):\n",
+    "            print(\"%5d\" %array[i])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
