--- a/problems-review/220~250.ipynb
+++ b/problems-review/220~250.ipynb
@@ -997,12 +997,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "insert number: 5\n"
+      "insert number: 5\n",
+      "    1    1    1    1    1\n",
+      "    1    2    3    4    5\n",
+      "    1    3    6   10   15\n",
+      "    1    4   10   20   35\n",
+      "    1    5   15   35   70\n"
      ]
     }
    ],
    "source": [
-    "a = int(input(\"insert number: \"))"
+    "a = int(input(\"insert number: \"))\n",
+    "array = [[0] * a for i in range(a)]\n",
+    "for i in range(0, a):\n",
+    "    for j in range(0, a):\n",
+    "        if i == 0 or j == 0: #첫째 행이나 열은 1\n",
+    "            array[i][j] = 1\n",
+    "        else:\n",
+    "            array[i][j] = array[i-1][j] + array[i][j - 1]\n",
+    "            \n",
+    "def printarray(array):\n",
+    "    for i in range(len(array)):\n",
+    "        for j in range(len(array[0])):\n",
+    "            print(\"%5d\" %array[i][j], end = \"\")\n",
+    "        print()\n",
+    "        \n",
+    "printarray(array)"
    ]
   },
   {
@@ -1011,90 +1031,54 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "array = [[0] * a for i in range(a)]"
+    "#244 숫자(n)이 입력되면, \n",
+    "#a) n개의 숫자를 왼쪽으로 한 자리씩 순서대로 자리이동하여 출력하는 프로그램\n",
+    "\n",
+    "\n",
+    "# ex) Enter the numbers : 1 2 3 4 5\n",
+    "#     1 | 2| 3 | 4| 5\n",
+    "#     2 | 3| 4 | 5| 1\n",
+    "#     3 | 4| 5 | 1| 2\n",
+    "#     4 | 5| 1 | 2| 3\n",
+    "#     5 | 1| 2 | 3| 4\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[[0, 0, 0, 0, 0],\n",
-       " [0, 0, 0, 0, 0],\n",
-       " [0, 0, 0, 0, 0],\n",
-       " [0, 0, 0, 0, 0],\n",
-       " [0, 0, 0, 0, 0]]"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2 3 4 5 \n",
+      "2 3 4 5 1 \n",
+      "3 4 5 1 2 \n",
+      "4 5 1 2 3 \n",
+      "5 1 2 3 4 \n"
+     ]
     }
    ],
    "source": [
-    "array"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "for i in range(0, a):\n",
-    "    for j in range(0, a):\n",
-    "        if i == 0 or j == 0: #첫째 행이나 열은 1\n",
-    "            array[i][j] = 1\n",
+    "numbers = input(\"Enter the number: \")\n",
+    "numlist = numbers.split(\" \")\n",
+    "for i in range(len(numlist)):\n",
+    "    numlist[i] = int(numlist[i])\n",
+    "\n",
+    "for i in range(len(numlist)):\n",
+    "    for j in range(len(numlist)):\n",
+    "        print(numlist[j], end= \" \")\n",
+    "    a = numlist[0]\n",
+    "    for j in range(len(numlist)):\n",
+    "        if j <= len(numlist) - 2:\n",
+    "            numlist[j] = numlist[j+1]\n",
     "        else:\n",
-    "            array[i][j] = array[i-1][j] + array[i][j - 1]\n",
-    "            \n",
-    "def printarry(array):\n",
-    "    for i in range(len(array)):\n",
-    "        for j in range(len(array[0])):\n",
-    "            print(\"%5d\" %array[i])"
+    "            numlist[j] = a\n",
+    "    print()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
