--- a/problems-review/220~250.ipynb
+++ b/problems-review/220~250.ipynb
@@ -1085,6 +1085,112 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "#245 숫자(n)이 입력되면 다음과 같은 규칙을 만들어내는 배열을 만드시오 \n",
+    "\n",
+    "\n",
+    "# Entered number: 3\n",
+    "# ex) 1 | 6 | 7\n",
+    "#     2 | 5 | 8\n",
+    "#     3 | 4 | 9\n",
+    "\n",
+    "\n",
+    "# Entered number: 5\n",
+    "#     1 | 10 | 11 | 20| 21\n",
+    "#     2 | 9 | 12 | 19| 22\n",
+    "#     3 | 8 | 13 | 18| 23\n",
+    "#     4 | 7 | 14 | 17| 24\n",
+    "#     5 | 6 | 15 | 16| 25"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "insert number3\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input(\"insert number\"))\n",
+    "array = [[0] * n for i in range(n)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[0, 0, 0], [0, 0, 0], [0, 0, 0]]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-14-61384f7852b0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mn\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mj\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mn\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m         \u001b[0marray\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mj\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
+     ]
+    }
+   ],
+   "source": [
+    "k = 1\n",
+    "for i in range(n):\n",
+    "    if i % 2 == 0:\n",
+    "        for j in range(n):\n",
+    "            array[j][i] = k\n",
+    "            k += 1\n",
+    "            \n",
+    "    else:\n",
+    "        for j in range(n - 1, -1, -1):\n",
+    "            array[j][i] = k\n",
+    "            k += 1\n",
+    "            \n",
+    "def printarray(array):\n",
+    "    for i in range(len(array)):\n",
+    "        for j in range(len(array[0])):\n",
+    "            print(\"%5d\" %array[i][j])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
