--- a/problems-review/220~250.ipynb
+++ b/problems-review/220~250.ipynb
@@ -1105,60 +1105,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "insert number3\n"
+      "insert number5\n",
+      "    1   10   11   20   21\n",
+      "    2    9   12   19   22\n",
+      "    3    8   13   18   23\n",
+      "    4    7   14   17   24\n",
+      "    5    6   15   16   25\n"
      ]
     }
    ],
    "source": [
     "n = int(input(\"insert number\"))\n",
-    "array = [[0] * n for i in range(n)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[[0, 0, 0], [0, 0, 0], [0, 0, 0]]"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "array"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "IndexError",
-     "evalue": "list index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-14-61384f7852b0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mn\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mj\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mn\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m         \u001b[0marray\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mj\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
-     ]
-    }
-   ],
-   "source": [
+    "array = [[0] * n for i in range(n)]\n",
+    "\n",
     "k = 1\n",
     "for i in range(n):\n",
     "    if i % 2 == 0:\n",
@@ -1174,7 +1140,10 @@
     "def printarray(array):\n",
     "    for i in range(len(array)):\n",
     "        for j in range(len(array[0])):\n",
-    "            print(\"%5d\" %array[i][j])"
+    "            print(\"%5d\" %array[i][j], end = \"\")\n",
+    "        print()\n",
+    "        \n",
+    "printarray(array)"
    ]
   },
   {
@@ -1183,7 +1152,64 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "array"
+    "#246 숫자(n)이 입력되면 다음과 같은 규칙을 만들어내는 배열을 만드시오 \n",
+    "\n",
+    "\n",
+    "# Entered number: 3\n",
+    "# ex) 1 | 2 | 3\n",
+    "#     6 | 5 | 4\n",
+    "#     9 | 8 | 7\n",
+    "\n",
+    "\n",
+    "# Entered number: 5\n",
+    "#     1  | 2 | 3   | 4 | 5\n",
+    "#     10 | 9 | 8  | 7 | 6\n",
+    "#     11 | 12| 13 | 14| 15\n",
+    "#     20 | 19| 18 | 17| 16\n",
+    "#     21 | 22| 23 | 24| 25"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "insert number5\n",
+      "    1    2    3    4    5\n",
+      "   10    9    8    7    6\n",
+      "   11   12   13   14   15\n",
+      "   20   19   18   17   16\n",
+      "   21   22   23   24   25\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input(\"insert number\"))\n",
+    "array = [[0] * n for i in range(n)]\n",
+    "\n",
+    "k = 1\n",
+    "for i in range(n):\n",
+    "    if i % 2 == 0:\n",
+    "        for j in range(n):\n",
+    "            array[i][j] = k\n",
+    "            k += 1\n",
+    "            \n",
+    "    else:\n",
+    "        for j in range(n - 1, -1, -1):\n",
+    "            array[i][j] = k\n",
+    "            k += 1\n",
+    "            \n",
+    "def printarray(array):\n",
+    "    for i in range(len(array)):\n",
+    "        for j in range(len(array[0])):\n",
+    "            print(\"%5d\" %array[i][j], end = \"\")\n",
+    "        print()\n",
+    "        \n",
+    "printarray(array)"
    ]
   },
   {
