--- a/problems-review/220~250.ipynb
+++ b/problems-review/220~250.ipynb
@@ -1105,6 +1105,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "3\n",
+      "2\n",
+      "1\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(4, -1, -1):\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
    "outputs": [
@@ -1210,6 +1232,74 @@
     "        print()\n",
     "        \n",
     "printarray(array)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#247 숫자(n), (m)이 입력되면 다음과 같은 규칙을 만들어내는 배열을 만드시오 \n",
+    "\n",
+    "# Entered number: 3 4\n",
+    "# ex) 1 | 2 | 4 | 7\n",
+    "#     3 | 5 | 8 | 10\n",
+    "#     6 | 9 | 11| 12\n",
+    "\n",
+    "\n",
+    "# Entered number: 4 5\n",
+    "#     1 | 2  | 4   | 7 | 11\n",
+    "#     3 | 5  | 8  | 12 | 15\n",
+    "#     6 | 9 | 13 | 16 | 18\n",
+    "#     10|14| 17 | 19 | 20\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the number: 3 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "n, m = input(\"Enter the number: \").split(\" \")\n",
+    "n, m = int(n), int(m)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "array = [[0] * m for i in range(n)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[0, 0, 0, 0], [0, 0, 0, 0], [0, 0, 0, 0]]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "array"
    ]
   },
   {
