feat: added BInary_Tree

--- a/fun_coding/Hanoi_top.ipynb
+++ b/fun_coding/Hanoi_top.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -118,24 +118,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "3\n",
+      "1 2\n",
+      "1 3\n",
+      "2 3\n"
+     ]
+    }
+   ],
    "source": [
-    "N = int(input())\n",
-    "\n",
-    "\n",
+    "n = int(input())\n",
+    "count = 0\n",
+    "stack = []\n",
     "def hanoi(n, a, b, r):\n",
-    "    \n",
-    "    if n\n",
-    "    \n",
-    "    \n",
+    "    global count\n",
+    "    if n == 1:\n",
+    "        count += 1\n",
+    "        stack.append(\"{} {}\".format(a, b))\n",
+    "        \n",
     "    else:\n",
     "        hanoi(n-1, a, r, b)\n",
-    "        hanoi(1, r, b, a)\n",
+    "        hanoi(1, a, b, r)\n",
+    "        hanoi(n-1, r, b, a)\n",
     "        \n",
-    "        \n",
-    "hanoi(n, 1, 3, 2)"
+    "hanoi(n, 1, 3, 2)\n",
+    "print(count)\n",
+    "print(*stack, sep = \"\\n\")"
    ]
   },
   {
@@ -172,6 +187,90 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "insert number3\n",
+      "7\n",
+      "1 3\n",
+      "1 2\n",
+      "3 2\n",
+      "1 3\n",
+      "2 1\n",
+      "2 3\n",
+      "1 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input(\"insert number\"))\n",
+    "count = 0\n",
+    "stack = []\n",
+    "\n",
+    "def hanoi_top(n, a, b, r):\n",
+    "    global count\n",
+    "    if n == 1:\n",
+    "        count += 1\n",
+    "        stack.append(\"{} {}\".format(a,b))\n",
+    "        \n",
+    "    else:\n",
+    "        hanoi_top(n-1, a, r, b)\n",
+    "        hanoi_top(1, a, b, r)\n",
+    "        hanoi_top(n-1, r, b, a)\n",
+    "        \n",
+    "hanoi_top(n, 1, 3, 2)\n",
+    "print(count)\n",
+    "print(*stack, sep =\"\\n\")"
+   ]
   },
   {
    "cell_type": "code",
