feat: added BSS_2

--- a/fun_coding/practice.ipynb
+++ b/fun_coding/practice.ipynb
@@ -2,325 +2,44 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 16,
+   "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "TreeNode of 6 is deleted\n",
-      "TreeNode of 3 is deleted\n",
-      "TreeNode of 2 is deleted\n",
-      "TreeNode of 4 is deleted\n",
-      "TreeNode of 5 is deleted\n",
-      "TreeNode of 8 is deleted\n",
-      "TreeNode of 10 is deleted\n",
-      "TreeNode of 11 is deleted\n",
-      "TreeNode of 6 is deleted\n",
-      "TreeNode of 3 is deleted\n",
-      "TreeNode of 2 is deleted\n",
-      "TreeNode of 4 is deleted\n",
-      "TreeNode of 5 is deleted\n",
-      "TreeNode of 8 is deleted\n",
-      "TreeNode of 10 is deleted\n",
-      "TreeNode of 11 is deleted\n",
-      "TreeNode of 6 is deleted\n",
-      "TreeNode of 3 is deleted\n",
-      "TreeNode of 2 is deleted\n",
-      "TreeNode of 4 is deleted\n",
-      "TreeNode of 5 is deleted\n",
-      "TreeNode of 8 is deleted\n",
-      "TreeNode of 10 is deleted\n",
-      "TreeNode of 11 is deleted\n"
+     "ename": "NameError",
+     "evalue": "name 'FourCal' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-16-5cfa1e393ba9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0ma\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mFourCal\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'FourCal' is not defined"
      ]
     }
    ],
    "source": [
-    "from binary_tree import *\n",
-    "\n",
-    "class BST:\n",
-    "    #1. 이진 트리와 같음\n",
-    "    def __init__(self):\n",
-    "        self.root = None\n",
-    "    #2. 이진 트리와 같음\n",
-    "    def get_root(self):\n",
-    "        return self.root\n",
-    "    #3. 이진 트리와 같음\n",
-    "    def preorder_traverse(self, cur, f):\n",
-    "        if not cur:\n",
-    "            return\n",
-    "\n",
-    "        f(cur.data)\n",
-    "        self.preorder_traverse(cur.left, f)\n",
-    "        self.preorder_traverse(cur.right, f)\n",
-    "        \n",
-    "    def insert(self, data):\n",
-    "        #삽입할 노드 생성 및 데이터 설정\n",
-    "        new_node = TreeNode()\n",
-    "        new_node.data = data\n",
-    "\n",
-    "        cur = self.root\n",
-    "        #루트 노드가 없을 때\n",
-    "        if cur == None:\n",
-    "            self.root = new_node\n",
-    "            return\n",
-    "\n",
-    "        #삽입할 노드의 위치를 찾아 삽입\n",
-    "        while True:\n",
-    "            #parent는 현재 순회 중인 노드의 부모 노드를 가리킴\n",
-    "            parent = cur\n",
-    "            #삽입할 데이터가 현재 노드 데이터보다 작을 때\n",
-    "            if data < cur.data:\n",
-    "                cur = cur.left\n",
-    "                #왼쪽 서브 트리가 None이면 새 노드를 위치시킨다.\n",
-    "                if not cur:\n",
-    "                    parent.left = new_node\n",
-    "                    return\n",
-    "            #삽입할 데이터가 현재 노드 데이터보다 클 때\n",
-    "            else:\n",
-    "                cur = cur.right\n",
-    "                #오른쪽 서브 트리가 None이면 새 노드를 위치시킨다. \n",
-    "                if not cur:\n",
-    "                    parent.right = new_node\n",
-    "                    return\n",
-    "\n",
-    "    def search(self, target):\n",
-    "        cur = self.root\n",
-    "        \n",
-    "        while cur:\n",
-    "            #target 데이터를 찾으면 노드를 반환\n",
-    "            if target == cur.data:\n",
-    "                return cur\n",
-    "            #target 데이터가 노드 데이터보다 작으면\n",
-    "            #왼쪽 자식 노드로 이동\n",
-    "            elif target < cur.data:\n",
-    "                cur = cur.left\n",
-    "            #target 데이터가 노드 데이터보다 크면\n",
-    "            #오른쪽 자식 노드로 이동\n",
-    "            elif target > cur.data:\n",
-    "                cur = cur.right\n",
-    "        #while 문을 빠져나온 경우\n",
-    "        #target 데이터가 트리 안에 없다.\n",
-    "        return cur\n",
-    "\n",
-    "    def __remove_recursion(self, cur, target):\n",
-    "        #탈출 조건 1\n",
-    "        #대상 데이터가 트리 안에 없다.\n",
-    "        if cur == None:\n",
-    "            return None, None\n",
-    "        #대상 데이터가 노드 데이터보다 작으면\n",
-    "        #노드의 왼쪽 자식에서 대상 데이터를 가진 노드를 지운다.(재귀 함수 호출)\n",
-    "        elif target < cur.data:\n",
-    "            cur.left, rem_node = \\\n",
-    "                self.__remove_recursion(cur.left, target)\n",
-    "        #대상 데이터가 노드 데이터보다 크면\n",
-    "        #노드의 오른쪽 자식에서 대상 데이터를 가진 노드를 지운다.(재귀 함수 호출)\n",
-    "        elif target > cur.data:\n",
-    "            cur.right, rem_node = self.__remove_recursion(cur.right, target)\n",
-    "        #탈출 조건 2\n",
-    "        #target == cur.data    \n",
-    "        else:\n",
-    "            #1. 리프 노드일 때\n",
-    "            if not cur.left and not cur.right:\n",
-    "                rem_node = cur\n",
-    "                cur = None\n",
-    "            #2-1. 자식 노드가 하나일 때: 왼쪽 자식이 있을 때\n",
-    "            elif not cur.right:\n",
-    "                rem_node = cur\n",
-    "                cur = cur.left\n",
-    "            #2-2. 자식 노드가 하나일 때: 오른쪽 자식이 있을 때\n",
-    "            elif not cur.left:\n",
-    "                rem_node = cur\n",
-    "                cur = cur.right\n",
-    "            #3. 자식 노드가 두개일 때\n",
-    "            else:\n",
-    "                #4. 대체노드를 찾는다.\n",
-    "                replace = cur.left\n",
-    "                while replace.right:\n",
-    "                    replace = replace.right\n",
-    "                #5. 삭제 노드와 대체 노드의 값을 교환한다.\n",
-    "                cur.data, replace.data = replace.data, cur.data\n",
-    "                #6. 대체 노드를 삭제하면서 삭제된 노드를 받아온다.\n",
-    "                cur.left, rem_node = self.__remove_recursion(cur.left, replace.data)\n",
-    "        #삭제 노드가 루트 노드일 경우\n",
-    "        #루트가 변경될 수 있기 때문에\n",
-    "        #삭제 후 현재 루트를 반환 \n",
-    "        return cur, rem_node\n",
-    "                \n",
-    "    def remove(self, target):\n",
-    "        #루트 노드의 변경 가능성이 있으므로\n",
-    "        #루트를 업데이트 해주어야 한다.\n",
-    "        self.root, removed_node = self.__remove_recursion(self.root, target)\n",
-    "        #삭제된 노드의 자식 노드를 None으로 만든다\n",
-    "        removed_node.left = removed_node.right = None\n",
-    "        \n",
-    "        return removed_node\n",
-    "\n",
-    "    #인자가 데이터가 아니라 노드이다.\n",
-    "    #insert() 메서드에서\n",
-    "    #노드 생성 코드만 빼면\n",
-    "    #코드 흐름은 완전히 같다.\n",
-    "    def insert_node(self, node):\n",
-    "        #노드 생성 코드 없음\n",
-    "        #노드 생성에 따른 부담을 덜 수 있다\n",
-    "\n",
-    "        cur = self.root\n",
-    "\n",
-    "        #insert() 메서드와 다른 점\n",
-    "        #new_node -> node\n",
-    "        if cur == None:\n",
-    "            self.root = node\n",
-    "            return\n",
-    "\n",
-    "        while True:\n",
-    "            parent = cur\n",
-    "            #insert() 메서드와 다른 점\n",
-    "            #data->node.data\n",
-    "            if node.data < cur.data:\n",
-    "                cur = cur.left\n",
-    "                if not cur:\n",
-    "                    #insert() 메서드와 다른 점\n",
-    "                    #new_node -> node\n",
-    "                    parent.left = node\n",
-    "                    return\n",
-    "            else:\n",
-    "                cur = cur.right\n",
-    "                if not cur:\n",
-    "                    #insert() 메서드와 다른 점\n",
-    "                    #new_node -> node\n",
-    "                    parent.right = node\n",
-    "                    return"
+    "a = FourCal()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "TreeNode of 6 is deleted\n",
-      "TreeNode of 3 is deleted\n",
-      "TreeNode of 2 is deleted\n",
-      "TreeNode of 4 is deleted\n",
-      "TreeNode of 5 is deleted\n",
-      "TreeNode of 10 is deleted\n",
-      "TreeNode of 9 is deleted\n",
-      "TreeNode of 11 is deleted\n",
-      "6 3 2 4 5 8 10 9 11 \n",
-      "TreeNode of 6 is deleted\n",
-      "5 3 2 4 8 10 9 11 "
-     ]
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "if __name__ == \"__main__\":\n",
-    "    bst = BST()\n",
-    "    \n",
-    "    bst.insert(6)\n",
-    "    bst.insert(3)\n",
-    "    bst.insert(2)\n",
-    "    bst.insert(4)\n",
-    "    bst.insert(5)\n",
-    "    bst.insert(8)\n",
-    "    bst.insert(10)\n",
-    "    bst.insert(9)\n",
-    "    bst.insert(11)\n",
-    "    \n",
-    "    f = lambda x: print(x, end = \" \")\n",
-    "    \n",
-    "    bst.preorder_traverse(bst.get_root(), f)\n",
-    "    print()\n",
-    "    \n",
-    "    bst.remove(6)\n",
-    "    bst.preorder_traverse(bst.get_root(), f)\n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "   "
+    "add1(2)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
