feat added k번째수

--- a/fun_coding/BST(Binary_Search_Tree).ipynb
+++ b/fun_coding/BST(Binary_Search_Tree).ipynb
@@ -100,6 +100,9 @@
     "    def search(self, target):\n",
     "        cur = self.root\n",
     "        \n",
+    "        if not cur:\n",
+    "            return None\n",
+    "        \n",
     "        while cur:\n",
     "            #target 데이터를 찾으면 노드를 반환\n",
     "            if target == cur.data:\n",
