feat: modified problems-review

--- a/problems-review/Review (1~100).ipynb
+++ b/problems-review/Review (1~100).ipynb
@@ -88,7 +88,7 @@
    "source": [
     "#(59)  2와 3의배수 찾기\n",
     "num = int(input(\"insert number\"))\n",
-    "True if num % 2 == 0 or num % 3 == 0 else False"
+    "True if num % 2 == 0 and num % 3 == 0 else False"
    ]
   },
   {
@@ -132,7 +132,7 @@
     "#(82)  문장의 시작만 대문자로 만들기\n",
     "Sentence = \"I'm from Korea, but I don't like Kimchi\"\n",
     "\n",
-    "Sentence.title()"
+    "Sentence[0].title() + Sentence[1:].lower()"
    ]
   },
   {
