--- a/problems-review/101~131.ipynb
+++ b/problems-review/101~131.ipynb
@@ -39,6 +39,22 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#(109) 1부터 10까지 정수 10개를 원소르 가지는 튜플을 하나 만들어, 원소들의 합을 출력하는 프로그램을 작성하시오.\n",
+    "\n",
+    "a = []\n",
+    "\n",
+    "for i in range(1,11):\n",
+    "    a.append(i)\n",
+    "    \n",
+    "sum(tuple(a))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
    "outputs": [
@@ -128,6 +144,24 @@
     "#(128) 10개수를 입력받아 최대값을 출력해주는것을 만드시오.\n",
     "nums = input(\"insert 10 numbers. each number must be separated by space. you put:  \").split(\" \")\n",
     "max(nums)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#(128) 10개수를 입력받아 최대값을 출력해주는것을 만드시오.\n",
+    "\n",
+    "def max_number():\n",
+    "    a = []\n",
+    "    \n",
+    "    for i in range(10):\n",
+    "        \n",
+    "        a.append(int(input()))\n",
+    "    \n",
+    "    return max(a)\n"
    ]
   },
   {
