--- a/problems-review/132-152.ipynb
+++ b/problems-review/132-152.ipynb
@@ -24,18 +24,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "insert number: 4\n",
+      "D d\n"
+     ]
+    }
+   ],
    "source": [
     "#139 자연수 N이 주어질때, N번째 알파벳 대문자와 소문자 출력하는 프로그램 작성\n",
     "\n",
-    "num = int(input(\"insert number b/w 1~26: \"))\n",
-    "\n",
+    "n = int(input(\"insert number: \"))\n",
     "def num_char(n):\n",
     "    print(chr(n+64), chr(n+96))\n",
     "    \n",
-    "num_char(num)"
+    "num_char(n)"
    ]
   },
   {
@@ -76,6 +84,30 @@
     "num_list\n",
     "list(map(int,num_list))\n",
     "sum(list(map(int,num_list)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = \"\"\n",
+    "result = 0\n",
+    "while True:\n",
+    "    try:\n",
+    "        n = int(input(\"insert number: \"))\n",
+    "        a+= str(n)\n",
+    "        \n",
+    "    except:\n",
+    "        break\n",
+    "        \n",
+    "for i in range(len(a)):\n",
+    "    if len(a) > 3*i:\n",
+    "        b = int(a[3*i : 3*i+3])\n",
+    "        result += b\n",
+    "        \n",
+    "result"
    ]
   },
   {
@@ -126,6 +158,24 @@
     "    print(\"age is : \", 100 + 19 - num, \"old\")\n",
     "else:\n",
     "    print(\"age is : \", 19 - num)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n = input(\"insert your SSN: \")\n",
+    "b = (int(n[0]+n[1]))\n",
+    "if b > 19:\n",
+    "    a = 119 - b\n",
+    "else:\n",
+    "    a = 19 - b\n",
+    "if a >= 65:\n",
+    "    print(\"old\", a)\n",
+    "else:\n",
+    "    print(\"young\", a)"
    ]
   },
   {
@@ -185,6 +235,30 @@
     "num3 = list(map(int, num3))\n",
     "num3.sort\n",
     "num3[2] * num3[1] - num3[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#1\n",
+    "a = []\n",
+    "for _ in range(2):\n",
+    "    num = int(input(\"insert number\"))\n",
+    "    a.append(num)\n",
+    "max(a) - min(a)\n",
+    "\n",
+    "#2\n",
+    "a = []\n",
+    "for _ in range(3):\n",
+    "    num = int(input(\"insert number\"))\n",
+    "    a.append(num)\n",
+    "\n",
+    "a.sort(reverse=True)\n",
+    "\n",
+    "a[0] * a[2] - a[1]\n"
    ]
   },
   {
@@ -267,13 +341,14 @@
     "#152 colors = [\"red\", \"orange\", \"blue\", \"green\", \"white\", \"black\", \"dark blue\", \"purple\"]\n",
     "# color를 입력해서, 원소와 중복된다면 Sorry, 없으면 추가하시오\n",
     "\n",
-    "color = input(\"color?\")\n",
     "colors = [\"red\", \"orange\", \"blue\", \"green\", \"white\", \"black\", \"dark blue\", \"purple\"]\n",
     "\n",
-    "if color in colors:\n",
-    "    print(\"Sorry\")\n",
+    "color = input(\"insert color: \").lower()\n",
+    "\n",
+    "if color not in colors:\n",
+    "    colors.append(color)\n",
     "else:\n",
-    "    colors.append(color)"
+    "    print(\"Sorry\")"
    ]
   },
   {
