--- a/problems-review/158~170.ipynb
+++ b/problems-review/158~170.ipynb
@@ -121,6 +121,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#161\n",
+    "a = int(input(\"insert number\"))\n",
+    "b = int(input(\"insert number\"))\n",
+    "\n",
+    "if min(a,b)+1 < max(a,b):\n",
+    "    print(random.randint(min(a,b)+1, max(a,b)-1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#161(2)\n",
     "\n",
     "def integer_find(n):\n",
@@ -203,7 +217,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## 163 총 3단계의 걸쳐 문제를 맞출경우 다음 단계로 넘어가는 퀴즈를 만드세요. 1단계: 1~2사이 정수, 2단계,1~4사이, 3단계 1~8사이\n",
+    "# 162\n",
+    "def average_randint():\n",
+    "    import random\n",
+    "    import statistics\n",
+    "    a = []\n",
+    "    for _ in range(3):\n",
+    "        a.append(random.randint(10,20))\n",
+    "    if statistics.mean(a) >= 15:\n",
+    "        print(\"Big\", statistics.mean(a))\n",
+    "    else:\n",
+    "        print(\"small\", statistics.mean(a))\n",
+    "average_randint()\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## 163 총 3단계의 걸쳐 문제를 맞출경우 다음 단계로 넘어가는 퀴즈를 만드세요. 1단계a: 1~2사이 정수, 2단계,1~4사이, 3단계 1~8사이\n",
     "#중간에 틀리면 Failed. try next time. 3단계 모두 맞추면 Congrats!를 출력\n",
     "from random import randrange\n",
     "num1, num2, num3 = randrange(1,3), randrange(1,5), randrange(1,9)\n",
@@ -229,6 +264,27 @@
     "                print(\"Congrats!\")\n",
     "                break\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "num1, num2, num3 = random.randint(1,2), random.randint(1,4), random.randint(1,8)\n",
+    "\n",
+    "\n",
+    "n = int(input(\"insert number b/w 1 and 2: \"))\n",
+    "if n == num1:\n",
+    "    n2 = int(input(\"insert number b/w 1 and 4: \"))\n",
+    "    if n2 == num2:\n",
+    "        n3 = int(input(\"insert number b/w 1 and 8: \"))\n",
+    "        if n3 == num3:\n",
+    "            print(\"Congrats!\")\n",
+    "else:\n",
+    "    print(\"Failed!\", num1, num2, num3)"
    ]
   },
   {
@@ -342,10 +398,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "insert number7\n",
+      "insert number34\n",
+      "10\n",
+      "15\n",
+      "20\n",
+      "25\n",
+      "30\n"
+     ]
+    }
+   ],
+   "source": [
+    "a, b = int(input(\"insert number\")), int(input(\"insert number\"))\n",
+    "\n",
+    "for i in range(min(a,b), max(a,b)):\n",
+    "    if i % 5 == 0:\n",
+    "        print(i)"
+   ]
   },
   {
    "cell_type": "code",
